Add registration and contact us pages
